@@ -49,12 +49,13 @@ static int run = 1;
 static int quiet = 0;
 static size_t caplen = UINT16_MAX - sizeof(cap_head);
 
-static const char* shortopts = "c:o:m:i:l:qh";
+static const char* shortopts = "c:o:m:i:I:l:qh";
 static struct option longopts[] = {
 	{"comments",  required_argument, 0, 'c'},
 	{"output",    required_argument, 0, 'o'},
 	{"mpid",      required_argument, 0, 'm'},
 	{"interface", required_argument, 0, 'i'},
+	{"CI",        required_argument, 0, 'I'},
 	{"caplen",    required_argument, 0, 'l'},
 	{"quiet",     no_argument,       0, 'q'},
 	{"help",      no_argument,       0, 'h'},
@@ -74,6 +75,7 @@ static void show_usage(){
 	printf("  -o, --output=FILENAME      Destination filename.\n");
 	printf("  -i, --interface=INTERFACE  Capture on live interface. (use \"any\" to capture\n"
 	       "                             on all interfaces)\n");
+	printf("  -I, --CI=INTERFACE         Set capture interface to INTERFACE [default: CONV]\n");
 	printf("      --caplen=INT           Set caplen. Default %zd bytes.\n", caplen);
 	printf("  -q, --quiet                Silent output, only errors is printed.\n");
 	printf("  -h, --help                 Show this help.\n");
@@ -191,6 +193,10 @@ int main (int argc, char **argv){
     case 'i':
       strncpy(cp.nic, optarg, 8);
       break;
+
+    case 'I': /* --ci */
+	    strncpy(cp.nic, optarg, 8);
+	    break;
 
     case 'l':
       caplen = atoi(optarg);
